test/corpus/comments.txt
===
No comments
===
asdf.
---

(source_file
  (read_term
    (atom
      (unquoted_atom))
    (read_term_end_token)))

===
EOL comment - no space
===
asdf.%asdf
---

(source_file
  (read_term
    (atom
      (unquoted_atom))
    (read_term_end_token))
  (eol_comment))

===
EOL comment - space
===
asdf. %asdf
---

(source_file
  (read_term
    (atom
      (unquoted_atom))
    (read_term_end_token))
  (eol_comment))

===
Multiline comment - simple
===
/* asdf */
x.
---

(source_file
  (multiline_comment)
  (read_term
    (atom
      (unquoted_atom))
    (read_term_end_token)))

===
Multiline comment - multi-line
===
/* Here's a comment
   that spans
   multiple
   lines */
x.
---

(source_file
  (multiline_comment)
  (read_term
    (atom
      (unquoted_atom))
    (read_term_end_token)))

===
EOL comment - percent then newline is a valid comment
===

asdf. %

---

(source_file
  (read_term
    (atom
      (unquoted_atom))
    (read_term_end_token))
  (eol_comment))

===
Multiline comment - missing end matches rest of file
===
asdf.
/* Sure hope I don't forget to close this comment...
   Ha, like that would ever happen!
---

(source_file
  (read_term
    (atom
      (unquoted_atom))
    (read_term_end_token))
  (multiline_comment))
