test/corpus/operators.txt
===
Period - ends a read term
===
asdf.
---

(source_file
  (read_term
    (atom
      (unquoted_atom))
    (read_term_end_token)))

===
Period - dot operator works
===
MyDict.my_key.
---

(source_file
  (read_term
    (binop_term
      (variable)
      (operator
        (non_comma_operator))
      (atom
        (unquoted_atom)))
    (read_term_end_token)))

===
Prefix - pound sign
===
#X.
---

(source_file
  (read_term
    (prefix_operator_term
      (non_comma_operator)
      (variable))
    (read_term_end_token)))

===
Prefix - minus sign
===
-X.
---

(source_file
  (read_term
    (prefix_operator_term
      (non_comma_operator)
      (variable))
    (read_term_end_token)))

===
Prefix - multi-char
===
@@@X.
---

(source_file
  (read_term
    (prefix_operator_term
      (non_comma_operator)
      (variable))
    (read_term_end_token)))

===
Prefix - directive
===
:- true.
---

(source_file
  (read_term
    (prefix_operator_term
      (non_comma_operator)
      (atom
        (unquoted_atom)))
    (read_term_end_token)))

===
Prefix - not provable operator
===
a(X) :- \+ X.
---

(source_file
  (read_term
    (binop_term
      (compound_term
        (atom
          (unquoted_atom))
        (variable))
      (operator
        (non_comma_operator))
      (prefix_operator_term
        (non_comma_operator)
        (variable)))
    (read_term_end_token)))

===
General unicode single-char operators
===
€123.
67 ≤ 23·3.
---

(source_file
  (read_term
    (prefix_operator_term
      (non_comma_operator)
      (integer))
    (read_term_end_token))
  (read_term
    (binop_term
      (integer)
      (operator
        (non_comma_operator))
      (binop_term
        (integer)
        (operator
          (non_comma_operator))
        (integer)))
    (read_term_end_token)))
